...
			android:orientation="horizontal"
			android:id="@+id/offerTypeRadioGroup">
			<RadioButton
				android:text="Short Term"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:id="@+id/offerShortTerm"/>
			<RadioButton
				android:text="Long Term"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:id="@+id/offerLongTerm"/>
			<RadioButton
				android:text="Pay in 1"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:id="@+id/offerPayIn1"/>
			<RadioButton
				android:text="Credit"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:id="@+id/offerCredit"/>
		</RadioGroup>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="48dp">
			<TextView
...
			<EditText
				android:importantForAutofill="no"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:inputType="text"
				android:ems="10"
				android:id="@+id/amount"
				android:hint="0.00"/>

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
...
