...
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

	<com.paypal.messages.RoundedWebView
		android:id="@+id/ModalWebView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<TextView
		android:id="@+id/ModalErrorText"
		android:layout_width="match_parent"
...
		android:elevation="1dp"
		android:indeterminate="true"
		android:indeterminateDrawable="@drawable/custom_progress"
		android:visibility="visible" />

	<ImageButton
		android:id="@+id/ModalCloseButton"
		android:layout_width="64dip"
		android:layout_height="64dip"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="12dip"
		android:layout_marginEnd="12dip"
...
