...
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/content"
		android:layout_width="0dp"
		android:layout_height="0dp"
		tools:text="Message"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
...
